dataset1235/2025-2/1153765216/users/1370515670/executions/3138746197_291286518.log
== SUBMISSION (2025-08-23 15:17:50)
-- CODE: 
# Lê o número digitado pelo usuário  e converter para inteiro 
número = int(input("256"))
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2562468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
25611356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
256888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
25622
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:58:28)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
número = int(input("11"))
# calcula o dobro do número 
dodro = 11*2 
# imprime o resultado
print("O dodro")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11O dodro
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11O dodro
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11O dodro
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11O dodro
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11O dodro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 15:13:52)
-- CODE: 
# Lê o número digitado pelo usuário  e converter para inteiro 
número = input("11")
número = int(11)
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
1122
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1122
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
1122
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
1122
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
1122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:39:30)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
numero = int(input("11"))
# Impressao do dobro do numero
dobro = numero * 2
#Imprimir o resultado 
print(f"dobro do {numero} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {numero} é {dodro}")
                                 ^^^^^
NameError: name 'dodro' is not defined. Did you mean: 'dobro'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {numero} é {dodro}")
                                 ^^^^^
NameError: name 'dodro' is not defined. Did you mean: 'dobro'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {numero} é {dodro}")
                                 ^^^^^
NameError: name 'dodro' is not defined. Did you mean: 'dobro'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {numero} é {dodro}")
                                 ^^^^^
NameError: name 'dodro' is not defined. Did you mean: 'dobro'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {numero} é {dodro}")
                                 ^^^^^
NameError: name 'dodro' is not defined. Did you mean: 'dobro'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 15:17:18)
-- CODE: 
# Lê o número digitado pelo usuário  e converter para inteiro 
número = int(input("5678"))
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
5678512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
56782468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
567811356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
5678888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
567822
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 14:29:30)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))

# Impressao do dobro do numero
dobro = num * 2
print(f"dobro")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11dobro
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11dobro
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11dobro
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11dobro
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11dobro
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:37:15)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
num = int(input("11"))
# Impressao do dobro do numero
dobro = num * 2
#Imprimir o resultado 
print(f"dobro do {num} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {num} é {dodro}")
                              ^^^^^
NameError: name 'dodro' is not defined. Did you mean: 'dobro'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {num} é {dodro}")
                              ^^^^^
NameError: name 'dodro' is not defined. Did you mean: 'dobro'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {num} é {dodro}")
                              ^^^^^
NameError: name 'dodro' is not defined. Did you mean: 'dobro'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {num} é {dodro}")
                              ^^^^^
NameError: name 'dodro' is not defined. Did you mean: 'dobro'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {num} é {dodro}")
                              ^^^^^
NameError: name 'dodro' is not defined. Did you mean: 'dobro'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 15:17:45)
-- CODE: 
# Lê o número digitado pelo usuário  e converter para inteiro 
número = int(input("256"))
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2562468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
25611356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
256888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
25622
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:57:01)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
número = int(input("11"))
# calcula o dobro do número 
dodro = numero*2 
# imprime o resultado
print(f"O dodro de {número} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:39:14)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
numero = int(input("11"))
# Impressao do dobro do numero
dobro = num * 2
#Imprimir o resultado 
print(f"dobro do {numero} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dobro = num * 2
            ^^^
NameError: name 'num' is not defined. Did you mean: 'sum'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dobro = num * 2
            ^^^
NameError: name 'num' is not defined. Did you mean: 'sum'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dobro = num * 2
            ^^^
NameError: name 'num' is not defined. Did you mean: 'sum'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dobro = num * 2
            ^^^
NameError: name 'num' is not defined. Did you mean: 'sum'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dobro = num * 2
            ^^^
NameError: name 'num' is not defined. Did you mean: 'sum'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 15:10:04)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
número = int(input(11))
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
112468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
1111356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
1122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:37:25)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
num = int(input("11"))
# Impressao do dobro do numero
dobro = num * 2
#Imprimir o resultado 
print(f"dobro do {numumero} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {numumero} é {dodro}")
                      ^^^^^^^^
NameError: name 'numumero' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {numumero} é {dodro}")
                      ^^^^^^^^
NameError: name 'numumero' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {numumero} é {dodro}")
                      ^^^^^^^^
NameError: name 'numumero' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {numumero} é {dodro}")
                      ^^^^^^^^
NameError: name 'numumero' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(f"dobro do {numumero} é {dodro}")
                      ^^^^^^^^
NameError: name 'numumero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 15:17:36)
-- CODE: 
# Lê o número digitado pelo usuário  e converter para inteiro 
número = int(input("256"))
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2562468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
25611356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
256888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
25622
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:42:03)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
numero = int((input("11"))
# Impressao do dobro do numero
dobro = numero *
#Imprimir o resultado 
print(f"dobro do {numero} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:30:39)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))

# Impressao do dobro do numero
dobro = num * 2
print(f"dobro de num ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11dobro de num
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11dobro de num
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11dobro de num
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11dobro de num
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11dobro de num
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:45:07)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
numero = int((input("11"))
# Impressao do dobro do numero
dobro = numero  2
#Imprimir o resultado 
print("dobro")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:55:18)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
número = int(input("11"))
# calcula o dobro do número 
dodro = numero * 2 
# imprime o resultado
print(f"O dodro de {número} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero * 2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero * 2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero * 2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero * 2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero * 2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:35:31)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
num = int(input("11"))
# Impressao do dobro do numero
dobro = num * 2
#Imprimir o resultado 
print("dobro ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11dobro
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11dobro
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11dobro
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11dobro
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11dobro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:45:09)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
numero = int((input("11"))
# Impressao do dobro do numero
dobro = numero  2
#Imprimir o resultado 
print("dobro")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:35:21)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
num = int(input("11"))
# Impressao do dobro do numero
dobro = num * 2
#Imprimir o resultado 
print("drobro ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11drobro
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11drobro
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11drobro
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11drobro
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11drobro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:35:10)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
num = int(input("11"))
# Impressao do dobro do numero
dobro = num * 2
Imprimir o resultado 
print("drobro ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 5
    Imprimir o resultado 
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 5
    Imprimir o resultado 
             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 5
    Imprimir o resultado 
             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 5
    Imprimir o resultado 
             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 5
    Imprimir o resultado 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:58:17)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
número = int(input("11"))
# calcula o dobro do número 
dodro = numero*2 
# imprime o resultado
print("O dodro")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:43:27)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
numero = int((input("11"))
# Impressao do dobro do numero
dobro = numero * 2
#Imprimir o resultado 
print(dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:52:37)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
num = int(input("11"))
# calcula o dobro do número 
dodro = num * 2 
# imprime o resultado
print(f"O dodro de {num} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11O dodro de 256 é 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11O dodro de 1234 é 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11O dodro de 5678 é 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11O dodro de 444 é 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11O dodro de 11 é 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 15:00:41)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
número = int(input("11"))
# calcula o dobro do número o
print("número * 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    print("número * 2)
          ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    print("número * 2)
          ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    print("número * 2)
          ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    print("número * 2)
          ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    print("número * 2)
          ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:57:33)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
número = int(input("11"))
# calcula o dobro do número 
dodro = numero*2 
# imprime o resultado
print(f"O dodro")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dodro = numero*2 
            ^^^^^^
NameError: name 'numero' is not defined. Did you mean: 'número'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 15:17:04)
-- CODE: 
# Lê o número digitado pelo usuário  e converter para inteiro 
número = int(input("5678"))
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
5678512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
56782468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
567811356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
5678888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
567822
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:42:27)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
numero = int((input("11"))
# Impressao do dobro do numero
dobro = numero * 2
#Imprimir o resultado 
print(f"dobro do {numero} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:29:33)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))

# Impressao do dobro do numero
dobro = num * 2
print(f"dobro")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11dobro
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11dobro
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11dobro
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11dobro
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11dobro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:31:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))

# Impressao do dobro do numero
dobro = num * 2
print("drobro ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11drobro
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11drobro
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11drobro
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11drobro
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11drobro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 15:17:33)
-- CODE: 
# Lê o número digitado pelo usuário  e converter para inteiro 
número = int(input("256"))
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2562468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
25611356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
256888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
25622
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:52:55)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
num = int(input("11"))
# calcula o dobro do número 
dodro = num*2 
# imprime o resultado
print(f"O dodro de {num} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11O dodro de 256 é 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11O dodro de 1234 é 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11O dodro de 5678 é 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11O dodro de 444 é 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11O dodro de 11 é 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 15:11:58)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
número = int(input("11"))
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
112468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
1111356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
1122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 15:17:43)
-- CODE: 
# Lê o número digitado pelo usuário  e converter para inteiro 
número = int(input("256"))
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2562468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
25611356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
256888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
25622
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 15:04:13)
-- CODE: 
# Lê o numero digitado pelo usuário  e o converte para inteiro 
número = int(input("11"))
# calcula o dobro do número o
print("número * 2")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11número * 2
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11número * 2
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11número * 2
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11número * 2
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11número * 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 15:15:42)
-- CODE: 
# Lê o número digitado pelo usuário  e converter para inteiro 
número = int(input("11"))

# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
112468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
1111356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
1122
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:37:51)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
numero = int(input("11"))
# Impressao do dobro do numero
dobro = num * 2
#Imprimir o resultado 
print(f"dobro do {numero} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dobro = num * 2
            ^^^
NameError: name 'num' is not defined. Did you mean: 'sum'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dobro = num * 2
            ^^^
NameError: name 'num' is not defined. Did you mean: 'sum'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dobro = num * 2
            ^^^
NameError: name 'num' is not defined. Did you mean: 'sum'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dobro = num * 2
            ^^^
NameError: name 'num' is not defined. Did you mean: 'sum'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dobro = num * 2
            ^^^
NameError: name 'num' is not defined. Did you mean: 'sum'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:38:40)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
numero = int(input("11:")
# Impressao do dobro do numero
dobro = num * 2
#Imprimir o resultado 
print(f"dobro do {numero} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 2
    numero = int(input("11:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 2
    numero = int(input("11:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 2
    numero = int(input("11:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 2
    numero = int(input("11:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 2
    numero = int(input("11:")
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 15:14:12)
-- CODE: 
# Lê o número digitado pelo usuário  e converter para inteiro 
número = input("11")
número = int(11)
# calcula o dobro do número do inteito 
dodro = número * 2
# resultado da multiplicação
print(dodro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
1122
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1122
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
1122
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
1122
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
1122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 14:42:28)
-- CODE: 
# Lê um numero fornecido pelo usuário e converter para inteiro 
numero = int((input("11"))
# Impressao do dobro do numero
dobro = numero * 2
#Imprimir o resultado 
print(f"dobro do {numero} é {dodro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 2
    numero = int((input("11"))
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
